build(client): bundle jlink runtime in client package