@@ -1,3 +1,3 @@
 #!/bin/bash
-server="urban-spork-client-gui"
-"$JAVA_HOME"/bin/java --module-path lib --add-modules javafx.controls -Xms64m -Xmx256m -Dio.netty.maxDirectMemory=0 -jar ${server}.jar
+cd "$(dirname "$0")"
+./runtime/bin/java -Xms64m -Xmx256m -Dio.netty.maxDirectMemory=0 -jar urban-spork-client-gui.jar
